--- a/project1.ipynb
+++ b/project1.ipynb
@@ -1451,8 +1451,9 @@
    "outputs": [],
    "source": [
     "#Ward 42:\n",
-    "#year with the highest increase of robbery in this ward:\n",
-    "#scatter plot with nb of robberies \n",
+    "#scatter plot to study the trend of robberies over the period of time 2001-2018\n",
+    "#our target: specify the year with the highest increase of robberies in ward 42\n",
+    "\n",
     "\n"
    ]
   },
